SacrificialStab and WickedStab Added and Working.

--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,7 +1,15 @@
 {
   "YagoMod:DefaultCommonAttack": {
     "NAME": "Strike",
-    "DESCRIPTION": "Deal !D! damage. NL [#0000ff]This[] [#ff0000]Is[] [#ffff00]How[] [#88888]color[] [#ff00ff]works.[]"
+    "DESCRIPTION": "Deal !D! damage, Draw !M! cards. NL [#0000ff]This[] [#ff0000]Is[] [#ffff00]How[] [#88888]color[] [#ff00ff]works.[]"
+  },
+  "YagoMod:WickedStab": {
+    "NAME": "WickedStab",
+    "DESCRIPTION": "Deal !D! damage. NL Apply !M! Weak."
+  },
+  "YagoMod:SacrificialStab": {
+    "NAME": "Sacrificial Stab",
+    "DESCRIPTION": "Deal !D! damage. NL If Fatal, Gain !M! [E]."
   },
   "YagoMod:DefaultCommonSkill": {
     "NAME": "Defend",
