--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Keyword-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Keyword-Strings.json
@@ -16,5 +16,12 @@
       "multikeyword"
     ],
     "DESCRIPTION": "Make sure the first element in the NAMES is the same as your PROPER_NAME. The rest is to match keywords like the single word keyword."
+  },
+  {
+    "NAMES": [
+      "Lifesteal",
+      "lifesteal"
+    ],
+    "DESCRIPTION": "Heal for unblocked damage done by this card."
   }
 ]
