Bloody Block, Dusk Added and Working.

--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,12 @@
 {
+  "YagoMod:BloodyBlock": {
+  "NAME": "Bloody Block",
+  "DESCRIPTION": "Lose !M! HP. NL Gain !B! Block."
+},
+  "YagoMod:Dusk": {
+  "NAME": "Dusk",
+  "DESCRIPTION": "Gain [E] equal to your hand size."
+},
   "YagoMod:Penance": {
     "NAME": "Penance",
     "DESCRIPTION": "Whenever you heal, NL Draw a card."
