Oblation Added and Working.

--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,8 @@
 {
+  "YagoMod:Oblation": {
+  "NAME": "Oblation",
+  "DESCRIPTION": "Unplayable. NL If this card is discarded from your hand, heal !M! and draw 1 card."
+},
   "YagoMod:BloodyBlock": {
   "NAME": "Bloody Block",
   "DESCRIPTION": "Lose !M! HP. NL Gain !B! Block."
