VampiricInstinct Added and Working.

--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,8 @@
 {
+  "YagoMod:VampiricInstinct": {
+    "NAME": "Vampiric Instinct",
+    "DESCRIPTION": "Shuffle !M! Bite into your discard pile. Exhaust."
+  },
   "YagoMod:SurrenderFlesh": {
   "NAME": "Surrender Flesh",
   "DESCRIPTION": "Draw !M! cards. NL Lose 2 max HP."
