Toxic Chemicals Added and Working, Oblation fixed.

--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,8 @@
 {
+  "YagoMod:ToxicChemicals": {
+    "NAME": "Toxic Chemicals",
+    "DESCRIPTION": "Discard 1 card. NL Obtain a common potion."
+  },
   "YagoMod:VampiricInstinct": {
     "NAME": "Vampiric Instinct",
     "DESCRIPTION": "Shuffle !M! Bite into your discard pile. Exhaust."
