SoulBeam Working, DesperatePrayer in progress.

--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,9 @@
 {
+  "YagoMod:SoulBeam": {
+    "NAME": "Soul Beam",
+    "DESCRIPTION": "Deal !D! damage to all enemies. NL Lose !M! Max HP.",
+    "FLAVOR": "Soul not included."
+  },
   "YagoMod:Inferno": {
     "NAME": "Inferno",
     "DESCRIPTION": "Unplayable. NL If this card is discarded, deal !D! damage to all enemies. Increase the damage of ALL Inferno cards by !M! this combat."
