--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Keyword-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Keyword-Strings.json
@@ -23,5 +23,12 @@
       "lifesteal"
     ],
     "DESCRIPTION": "Heal for unblocked damage done by this card."
+  },
+  {
+    "NAMES": [
+      "Stun",
+      "stun"
+    ],
+    "DESCRIPTION": "Stunned characters lose their turn."
   }
 ]
