--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,8 @@
 {
+  "YagoMod:FrighteningShout": {
+    "NAME": "Frightening Shout",
+    "DESCRIPTION": "Apply !M! Weak. NL Gain !B! Block."
+  },
   "YagoMod:HallOfMirrors": {
     "NAME": "Hall of Mirrors",
     "DESCRIPTION": "Duplicate your hand. NL Exhaust."
