--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,8 @@
 {
+  "YagoMod:Repent": {
+    "NAME": "Repent",
+    "DESCRIPTION": "Deal !D! damage. NL Remove ALL Debuffs."
+  },
   "YagoMod:ScarredSkin": {
     "NAME": "Scarred Skin",
     "DESCRIPTION": "Gain Block equal to the damage you received this turn.",
