--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,8 @@
 {
+  "YagoMod:Gash": {
+    "NAME": "Gash",
+    "DESCRIPTION": "Unplayable. NL When drawn lose 2 HP. NL Ethereal."
+  },
   "YagoMod:FlagellantWhip": {
     "NAME": "Flagellant's Whip",
     "DESCRIPTION": "Deal !D! damage. NL Can only be played if you took damage this turn."
