--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Keyword-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Keyword-Strings.json
@@ -30,5 +30,12 @@
       "stun"
     ],
     "DESCRIPTION": "Stunned characters lose their turn."
+  },
+  {
+    "NAMES": [
+      "Discover",
+      "discover"
+    ],
+    "DESCRIPTION": "Choose 1 of 3 random cards to add to your hand. Will not show healing cards."
   }
 ]
