--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,11 +1,16 @@
 {
+  "YagoMod:SinnersBlood": {
+    "NAME": "Sinner's Blood",
+    "DESCRIPTION": "Deal !D! damage !M! times. NL Damage increases with damage taken this turn."
+  },
   "YagoMod:ThreeTenets": {
     "NAME": "Three Tenets",
-    "DESCRIPTION": "yagomod:Discover a card. NL Card color is based on previously played card. Attack red, Power blue, Skill green."
+    "DESCRIPTION": "yagomod:Discover. NL If the previous card was attack shows [#FF0000]RED[], NL power shows [#ADD8E6]BLUE[], NL skill shows [#00FF00]GREEN[].",
+    "UPGRADE_DESCRIPTION": "yagomod:Discover. NL If the previous card was attack shows [#FF0000]RED[], NL power shows [#ADD8E6]BLUE[], NL skill shows [#00FF00]GREEN[], NL It costs 0 this turn."
   },
   "YagoMod:NoCreed": {
     "NAME": "No Creed",
-    "DESCRIPTION": "Discard 1 card. NL yagomod:Discover a card of the same type, it cost 0 this turn. NL Exhaust."
+    "DESCRIPTION": "Discard 1 card. NL yagomod:Discover cards of the same type, it cost 0 this turn. NL Exhaust."
   },
   "YagoMod:Gash": {
     "NAME": "Gash",
