--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,8 @@
 {
+  "YagoMod:FairyBrew": {
+    "NAME": "Fairy Brew",
+    "DESCRIPTION": "Obtain a Fairy in a Bottle Potion. NL Reduce the cost of this card by 1 when discarded. NL Exhaust."
+  },
   "YagoMod:PunishmentsSolace": {
   "NAME": "Punishments Solace",
   "DESCRIPTION": "Deal !D! damage. NL Whenever you take damage return this from your discard pile to your Hand."
