--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Power-Strings.json
@@ -18,5 +18,9 @@
         "YagoMod:Penance": {
         "NAME": "Penance",
         "DESCRIPTIONS": ["Whenever you heal draw ", " card.", " cards."]
-}
+},
+        "YagoMod:LastStandPower": {
+                "NAME": "Last Stand",
+                "DESCRIPTIONS": ["Take ", " damage at the start of next turn."]
+        }
 }
