--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,8 @@
 {
+  "YagoMod:Hellfire": {
+    "NAME": "Hellfire",
+    "DESCRIPTION": "Deal !D! damage to all enemies. NL Discard 1 card."
+  },
   "YagoMod:HallowedDagger": {
     "NAME": "Hallowed Dagger",
     "DESCRIPTION": "Deal !D! damage 2 times. NL yagomod:Lifesteal if you took damage this turn."
