--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,8 @@
 {
+  "YagoMod:OrdainedSword": {
+    "NAME": "Ordained Sword",
+    "DESCRIPTION": "Deal !D! damage. NL yagomod:Lifesteal if below 30% HP."
+  },
   "YagoMod:Hellfire": {
     "NAME": "Hellfire",
     "DESCRIPTION": "Deal !D! damage to all enemies. NL Discard 1 card."
