--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Power-Strings.json
@@ -30,5 +30,9 @@
         "YagoMod:IndomitableSpiritPower": {
                 "NAME": "Indomitable Spirit",
                 "DESCRIPTIONS": ["At the start of the turn remove all debuffs."]
+        },
+        "YagoMod:LostScripturePower": {
+                "NAME": "Lost Scripture",
+                "DESCRIPTIONS": ["At the start of your turn Discover a card from a different color. It costs 0 this turn."]
         }
 }
