--- a/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/YagoModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -94,7 +94,8 @@
   },
   "YagoMod:NoCreed": {
     "NAME": "No Creed",
-    "DESCRIPTION": "Discard 1 card. NL yagomod:Discover cards of the same type, it cost 0 this turn. NL Exhaust."
+    "DESCRIPTION": "Discard 1 card. NL yagomod:Discover cards of the same type, it cost 0 this turn. NL Exhaust.",
+    "UPGRADE_DESCRIPTION":"Discard 1 card. NL yagomod:Discover cards of the same type, it cost 0 this turn. NL Innate. NL Exhaust."
   },
   "YagoMod:Gash": {
     "NAME": "Gash",
